TDStat updates, TDLineItem (v1)

--- a/3/DirectAgents.Web/DirectAgents.Web/Areas/TD/Views/CampStats/Pacing.cshtml
+++ b/3/DirectAgents.Web/DirectAgents.Web/Areas/TD/Views/CampStats/Pacing.cshtml
@@ -67,7 +67,7 @@
     {
         foreach (var platStat in cStat.PlatformStats)
         {
-            decimal budget = platStat.Budget.MediaSpend();
+            decimal budget = platStat.Budget.MediaSpend;
 <tr>
     <td colspan="2"></td>
     <td>@platStat.Platform.Name</td>
