--- a/3/DirectAgents.Web/DirectAgents.Web/Areas/TD/Views/Stats/MTD.cshtml
+++ b/3/DirectAgents.Web/DirectAgents.Web/Areas/TD/Views/Stats/MTD.cshtml
@@ -37,7 +37,7 @@ Month: @m.Month.ToString("MMM yyyy")
 </tr>
 <tr>
     <td>DA Cost</td>
-    <td>@m.Cost.ToString("C")</td>
+    <td>@m.DACost.ToString("C")</td>
     <td></td>
     <td></td>
 </tr>
