--- a/3/DirectAgents.Web/DirectAgents.Web/Areas/TD/Views/CampStats/PacingGrid.cshtml
+++ b/3/DirectAgents.Web/DirectAgents.Web/Areas/TD/Views/CampStats/PacingGrid.cshtml
@@ -84,7 +84,7 @@
                 { field: 'Campaign' },
                 { field: 'Budget', format: '{0:n2}', attributes: { style: "text-align:right" }, footerTemplate: "#: kendo.toString(data.Budget.sum, 'n2') #", footerAttributes: { style: "text-align:right" } },
                 { field: 'PctOfGoal', title: '%Used', width: 85, format: "{0:p}", attributes: { style: "text-align:right" }, footerTemplate: "#: kendo.toString(data.PctOfGoal.agg, 'p') #", footerAttributes: { style: "text-align:right" } },
-                { field: 'DACost', title: 'DACost', format: '{0:n2}', attributes: { style: "text-align:right" }, footerTemplate: "#: kendo.toString(data.DACost.sum, 'n2') #", footerAttributes: { style: "text-align:right" } },
+                { field: 'DACost', format: '{0:n2}', attributes: { style: "text-align:right" }, footerTemplate: "#: kendo.toString(data.DACost.sum, 'n2') #", footerAttributes: { style: "text-align:right" } },
                 { field: 'MediaSpend', title: 'ClientCost', format: '{0:n2}', attributes: { style: "text-align:right" }, footerTemplate: "#: kendo.toString(data.MediaSpend.sum, 'n2') #", footerAttributes: { style: "text-align:right" } },
                 { field: 'TotalRev', title: 'Revenue', format: '{0:n2}', attributes: { style: "text-align:right" }, footerTemplate: "#: kendo.toString(data.TotalRev.sum, 'n2') #", footerAttributes: { style: "text-align:right" } },
                 { field: 'Margin', format: '{0:n2}', attributes: { style: "text-align:right" }, footerTemplate: "#: kendo.toString(data.Margin.sum, 'n2') #", footerAttributes: { style: "text-align:right" } },
@@ -133,7 +133,7 @@
                 { field: 'Platform', width: 120 },
                 { field: 'Budget', format: '{0:n2}', attributes: { style: "text-align:right" } },
                 { field: 'PctOfGoal', title: '%Used', width: 85, format: "{0:p}", attributes: { style: "text-align:right" } },
-                { field: 'Cost', title: 'DACost', format: '{0:n2}', attributes: { style: "text-align:right" } },
+                { field: 'DACost', format: '{0:n2}', attributes: { style: "text-align:right" } },
                 { field: 'MediaSpend', title: 'ClientCost', format: '{0:n2}', attributes: { style: "text-align:right" } },
                 { field: 'TotalRev', title: 'Revenue', format: '{0:n2}', attributes: { style: "text-align:right" } },
                 { field: 'Margin', format: '{0:n2}', attributes: { style: "text-align:right" } },
