--- a/3/DirectAgents.Web/DirectAgents.Web/Areas/TD/Views/Stats/AdRoll.cshtml
+++ b/3/DirectAgents.Web/DirectAgents.Web/Areas/TD/Views/Stats/AdRoll.cshtml
@@ -8,7 +8,7 @@
     }
 </script>
 }
-<h2>Stats By Creative(AdRoll "Ad")</h2>
+<h2>Raw Stats By Creative(AdRoll "Ad")</h2>
 @Html.Partial("ChooseMonthNonSubmit", (SelectList)ViewBag.ChooseMonthSelectList)
 
 @Model.Name
