--- a/3/DirectAgents.Web/DirectAgents.Web/Areas/TD/Views/Stats/ExtAccount.cshtml
+++ b/3/DirectAgents.Web/DirectAgents.Web/Areas/TD/Views/Stats/ExtAccount.cshtml
@@ -9,7 +9,7 @@
     }
 </script>
 }
-<h2>External Account Stats</h2>
+<h2>External Accounts - Raw Stats</h2>
 <div style="margin-bottom:10px">
 <form>
     @Html.DropDownList("month", (SelectList)ViewBag.ChooseMonthSelectList, new { onchange = "ChangeMonth(this.value)" })
