--- a/3/DirectAgents.Web/DirectAgents.Web/Areas/TD/Views/Stats/Generic.cshtml
+++ b/3/DirectAgents.Web/DirectAgents.Web/Areas/TD/Views/Stats/Generic.cshtml
@@ -9,7 +9,7 @@
     }
 </script>
 }
-<h2>Stats By Creative</h2>
+<h2>Raw Stats By Creative</h2>
 @Html.Partial("ChooseMonthNonSubmit", (SelectList)ViewBag.ChooseMonthSelectList)
 
 @Model.Name
