MediaSpend->ClientCost, TDStatWithBudget->TDMediaStatWithBudget, ITDLineItem updates

--- a/3/DirectAgents.Web/DirectAgents.Web/Areas/TD/Views/BudgetInfos/Edit.cshtml
+++ b/3/DirectAgents.Web/DirectAgents.Web/Areas/TD/Views/BudgetInfos/Edit.cshtml
@@ -27,7 +27,7 @@
             <br /><br />
             <table>
                 <tr>
-                    <td>@Html.LabelFor(m => m.MediaSpend, "Budget (Media Spend)")</td>
+                    <td>@Html.LabelFor(m => m.MediaSpend, "Budget (ClientCost)")</td>
                     <td>@Html.EditorFor(m => m.MediaSpend)</td>
                 </tr>
                 <tr>
@@ -53,7 +53,7 @@
             <tr>
                 <th></th>
                 <th>Platform</th>
-                <th>Budget (MediaSpend)</th>
+                <th>Budget (ClientCost)</th>
                 <th>MgmtFeePct</th>
                 <th>MarginPct</th>
                 <th></th>
