--- a/3/DirectAgents.Web/DirectAgents.Web/Areas/TD/Views/CampStats/PacingGrid.cshtml
+++ b/3/DirectAgents.Web/DirectAgents.Web/Areas/TD/Views/CampStats/PacingGrid.cshtml
@@ -47,7 +47,7 @@
                         Budget: { type: 'number' },
                         PctOfGoal: { type: 'number' },
                         DACost: { type: 'number' },
-                        MediaSpend: { type: 'number' },
+                        ClientCost: { type: 'number' },
                         TotalRev: { type: 'number' },
                         Margin: { type: 'number' },
                         MarginPct: { type: 'number' },
@@ -60,7 +60,7 @@
                 { field: 'Budget', aggregate: 'sum' },
                 { field: 'PctOfGoal', aggregate: 'agg' },
                 { field: 'DACost', aggregate: 'sum' },
-                { field: 'MediaSpend', aggregate: 'sum' },
+                { field: 'ClientCost', aggregate: 'sum' },
                 { field: 'TotalRev', aggregate: 'sum' },
                 { field: 'Margin', aggregate: 'sum' },
                 { field: 'MarginPct', aggregate: 'agg' }
@@ -85,7 +85,7 @@
                 { field: 'Budget', format: '{0:n2}', attributes: { style: "text-align:right" }, footerTemplate: "#: kendo.toString(data.Budget.sum, 'n2') #", footerAttributes: { style: "text-align:right" } },
                 { field: 'PctOfGoal', title: '%Used', width: 85, format: "{0:p}", attributes: { style: "text-align:right" }, footerTemplate: "#: kendo.toString(data.PctOfGoal.agg, 'p') #", footerAttributes: { style: "text-align:right" } },
                 { field: 'DACost', format: '{0:n2}', attributes: { style: "text-align:right" }, footerTemplate: "#: kendo.toString(data.DACost.sum, 'n2') #", footerAttributes: { style: "text-align:right" } },
-                { field: 'MediaSpend', title: 'ClientCost', format: '{0:n2}', attributes: { style: "text-align:right" }, footerTemplate: "#: kendo.toString(data.MediaSpend.sum, 'n2') #", footerAttributes: { style: "text-align:right" } },
+                { field: 'ClientCost', format: '{0:n2}', attributes: { style: "text-align:right" }, footerTemplate: "#: kendo.toString(data.ClientCost.sum, 'n2') #", footerAttributes: { style: "text-align:right" } },
                 { field: 'TotalRev', title: 'Revenue', format: '{0:n2}', attributes: { style: "text-align:right" }, footerTemplate: "#: kendo.toString(data.TotalRev.sum, 'n2') #", footerAttributes: { style: "text-align:right" } },
                 { field: 'Margin', format: '{0:n2}', attributes: { style: "text-align:right" }, footerTemplate: "#: kendo.toString(data.Margin.sum, 'n2') #", footerAttributes: { style: "text-align:right" } },
                 { field: 'MarginPct', format: "{0:p}", attributes: { style: "text-align:right" }, footerTemplate: "#: kendo.toString(data.MarginPct.agg, 'p') #", footerAttributes: { style: "text-align:right" } },
@@ -134,7 +134,7 @@
                 { field: 'Budget', format: '{0:n2}', attributes: { style: "text-align:right" } },
                 { field: 'PctOfGoal', title: '%Used', width: 85, format: "{0:p}", attributes: { style: "text-align:right" } },
                 { field: 'DACost', format: '{0:n2}', attributes: { style: "text-align:right" } },
-                { field: 'MediaSpend', title: 'ClientCost', format: '{0:n2}', attributes: { style: "text-align:right" } },
+                { field: 'ClientCost', format: '{0:n2}', attributes: { style: "text-align:right" } },
                 { field: 'TotalRev', title: 'Revenue', format: '{0:n2}', attributes: { style: "text-align:right" } },
                 { field: 'Margin', format: '{0:n2}', attributes: { style: "text-align:right" } },
                 { field: 'MarginPct', format: "{0:p}", attributes: { style: "text-align:right" } }
