--- a/3/DirectAgents.Web/DirectAgents.Web/Areas/TD/Views/Campaigns/Edit.cshtml
+++ b/3/DirectAgents.Web/DirectAgents.Web/Areas/TD/Views/Campaigns/Edit.cshtml
@@ -27,7 +27,7 @@
             Defaults
             <table>
                 <tr>
-                    <td>@Html.LabelFor(m => m.DefaultBudgetInfo.MediaSpend, "Budget (MediaSpend)")</td>
+                    <td>@Html.LabelFor(m => m.DefaultBudgetInfo.MediaSpend, "Budget (ClientCost)")</td>
                     <td>@Html.EditorFor(m => m.DefaultBudgetInfo.MediaSpend)</td>
                 </tr>
                 <tr>
@@ -52,7 +52,7 @@
             <tr>
                 <th></th>
                 <th>Month</th>
-                <th>Budget (MediaSpend)</th>
+                <th>Budget (ClientCost)</th>
                 <th>MgmtFeePct</th>
                 <th>MarginPct</th>
                 <th>Exceptions For</th>
