--- a/3/DirectAgents.Web/DirectAgents.Web/Areas/TD/Views/Stats/MTD.cshtml
+++ b/3/DirectAgents.Web/DirectAgents.Web/Areas/TD/Views/Stats/MTD.cshtml
@@ -42,8 +42,8 @@ Month: @m.Month.ToString("MMM yyyy")
     <td></td>
 </tr>
 <tr>
-    <td>Media Spend</td>
-    <td>@m.MediaSpend.ToString("C")</td>
+    <td>Client Cost</td>
+    <td>@m.ClientCost.ToString("C")</td>
     <td>@m.Budget.MediaSpend.ToString("C")</td>
     <td>@m.FractionReached().ToString("#0.##%")</td>
 </tr>
