--- a/3/DirectAgents.Web/DirectAgents.Web/Areas/TD/Views/CampStats/PerformanceGrid.cshtml
+++ b/3/DirectAgents.Web/DirectAgents.Web/Areas/TD/Views/CampStats/PerformanceGrid.cshtml
@@ -43,7 +43,7 @@
                         Campaign: { type: 'string' },
                         Budget: { type: 'number' },
                         DACost: { type: 'number' },
-                        MediaSpend: { type: 'number' },
+                        ClientCost: { type: 'number' },
                         TotalRev: { type: 'number' },
                         Margin: { type: 'number' },
                         MarginPct: { type: 'number' },
@@ -63,7 +63,7 @@
                 //{ field: 'NumExtAccts', aggregate: 'sum' },
                 { field: 'Budget', aggregate: 'sum' },
                 { field: 'DACost', aggregate: 'sum' },
-                { field: 'MediaSpend', aggregate: 'sum' },
+                { field: 'ClientCost', aggregate: 'sum' },
                 { field: 'TotalRev', aggregate: 'sum' },
                 { field: 'Margin', aggregate: 'sum' },
                 { field: 'MarginPct', aggregate: 'agg' },
@@ -96,7 +96,7 @@
                 { field: 'Budget', format: '{0:n2}', attributes: { style: "text-align:right" }, footerTemplate: "#: kendo.toString(data.Budget.sum, 'n2') #", footerAttributes: { style: "text-align:right" } },
                 { field: 'PctOfGoal', title: '%Used', width: 80, format: "{0:p}", attributes: { style: "text-align:right" }, footerTemplate: "#: kendo.toString(data.PctOfGoal.agg, 'p') #", footerAttributes: { style: "text-align:right" } },
                 { field: 'DACost', title: 'DACost', format: '{0:n2}', attributes: { style: "text-align:right" }, footerTemplate: "#: kendo.toString(data.DACost.sum, 'n2') #", footerAttributes: { style: "text-align:right" } },
-                { field: 'MediaSpend', title: 'ClientCost', format: '{0:n2}', attributes: { style: "text-align:right" }, footerTemplate: "#: kendo.toString(data.MediaSpend.sum, 'n2') #", footerAttributes: { style: "text-align:right" } },
+                { field: 'ClientCost', format: '{0:n2}', attributes: { style: "text-align:right" }, footerTemplate: "#: kendo.toString(data.ClientCost.sum, 'n2') #", footerAttributes: { style: "text-align:right" } },
                 { field: 'TotalRev', title: 'Revenue', format: '{0:n2}', attributes: { style: "text-align:right" }, footerTemplate: "#: kendo.toString(data.TotalRev.sum, 'n2') #", footerAttributes: { style: "text-align:right" } },
                 { field: 'Margin', format: '{0:n2}', attributes: { style: "text-align:right" }, footerTemplate: "#: kendo.toString(data.Margin.sum, 'n2') #", footerAttributes: { style: "text-align:right" } },
                 { field: 'MarginPct', format: "{0:p}", attributes: { style: "text-align:right" }, footerTemplate: "#: kendo.toString(data.MarginPct.agg, 'p') #", footerAttributes: { style: "text-align:right" } },
