--- a/3/DirectAgents.Web/DirectAgents.Web/Areas/TD/Views/Stats/MTD.cshtml
+++ b/3/DirectAgents.Web/DirectAgents.Web/Areas/TD/Views/Stats/MTD.cshtml
@@ -19,7 +19,7 @@ Month: @m.Month.ToString("MMM yyyy")
 </tr>
 <tr>
     <th>Platforms</th>
-    <td>@String.Join(",", m.PlatformStats.Select(ps => ps.Platform.Name))</td>
+    <td>@String.Join(",", m.LineItems.Select(li => li.Platform.Name))</td>@* compute differently? need distinct platform names *@
 </tr>
 <tr>
     <th>Computed Margin</th>
