--- a/3/DirectAgents.Web/DirectAgents.Web/Areas/TD/Views/CampStats/Pacing.cshtml
+++ b/3/DirectAgents.Web/DirectAgents.Web/Areas/TD/Views/CampStats/Pacing.cshtml
@@ -14,7 +14,7 @@
 <tr>
     <th>Advertiser</th>
     <th>Campaign</th>
-    <th>Platform</th>
+    <th>Partner</th>
     <th>Budget</th>
     <th>%Completed</th>
     <th>DA Cost</th>
