--- a/3/DirectAgents.Web/DirectAgents.Web/Areas/TD/Views/Campaigns/Edit.cshtml
+++ b/3/DirectAgents.Web/DirectAgents.Web/Areas/TD/Views/Campaigns/Edit.cshtml
@@ -88,7 +88,7 @@
         External Accounts
         <table>
             <tr>
-                <th>Platform</th>
+                <th>Partner</th>
                 <th>Account</th>
                 <th></th>
             </tr>
