--- a/3/DirectAgents.Web/DirectAgents.Web/Areas/TD/Views/Campaigns/Index.cshtml
+++ b/3/DirectAgents.Web/DirectAgents.Web/Areas/TD/Views/Campaigns/Index.cshtml
@@ -14,7 +14,7 @@
     <th>Advertiser</th>
     <th>Campaign</th>
     <th>External Accounts</th>
-    <th>Platforms</th>
+    <th>Partners</th>
     <th>Stats</th>
     <th></th>
 </tr>
