--- a/3/DirectAgents.Web/DirectAgents.Web/Areas/TD/Views/ExtAccounts/Edit.cshtml
+++ b/3/DirectAgents.Web/DirectAgents.Web/Areas/TD/Views/ExtAccounts/Edit.cshtml
@@ -13,7 +13,7 @@
         @Html.HiddenFor(m => m.PlatformId)
         @Html.HiddenFor(m => m.CampaignId)
         <div style="float:left">
-            Platform: @Model.Platform.Name
+            Partner: @Model.Platform.Name
             <br /><br />
             <table>
                 <tr>
