--- a/3/DirectAgents.Web/DirectAgents.Web/Areas/TD/Views/Platforms/Index.cshtml
+++ b/3/DirectAgents.Web/DirectAgents.Web/Areas/TD/Views/Platforms/Index.cshtml
@@ -3,7 +3,7 @@
     var lastMonth = DateTime.Today.AddMonths(-1);
     lastMonth = new DateTime(lastMonth.Year, lastMonth.Month, 1);
 }
-<h2>Platforms</h2>
+<h2>Partners</h2>
 
 <table>
 <tr>
