--- a/3/DirectAgents.Web/DirectAgents.Web/Areas/TD/Views/Stats/ExtAccount.cshtml
+++ b/3/DirectAgents.Web/DirectAgents.Web/Areas/TD/Views/Stats/ExtAccount.cshtml
@@ -18,7 +18,7 @@
 
 <table>
 <tr>
-    <th>Platform</th>
+    <th>Partner</th>
     <th>Ext Account</th>
     <th>Impressions</th>
     <th>Clicks</th>
